--- a/index.html
+++ b/index.html
@@ -137,17 +137,18 @@
                     
                     <!-- end of chunk of content by Tom and Steve-->
 
-                    <h3 id="list">Episodes and Programmes List</h3>
+                    <h3 id="list">Most Popular</h3>
                     <p>
-                    <img class="img-responsive" src="img/list.jpg"/>
-                    <ul>
-                        <li>Header: 22px, White</li>
-                        <li>Title: White</li>
-                        <li>Subtitle: White</li>
-                        <li>Synopsis: Silver</li>
-                        <li>Tertiary information 13px</li>
-                        <li>Space between elements, 2 times gel padding</li>
-                    </ul>
+                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
+                    <ol>
+                        <li>Promo:1084x270px/li>
+                        <li>Promo:1084x270px</li>
+                        <li>Promo:1084x270px</li>
+                        <li>Promo:1084x270px</li>
+                        <li>1px divider</li>
+                        <li>BG Colour #2a2a2a</li>
+                        <li>Nav BG Colour #141414</li>
+                    </ol>
                     </p>
 
 
