--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <p>
                     <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
                     <ol>
-                        <li>Promo:1084x270px/li>
+                        <li>Promo:1084x270px</li>
                         <li>Promo:1084x270px</li>
                         <li>Promo:1084x270px</li>
                         <li>Promo:1084x270px</li>
