--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <li><a href="#base">Base styles</a></li>
                                 <li><a href="#carousel">Carousel</a></li>
                                 <li><a href="#collections">Collections</a></li>
-                                <li><a href="#list">List</a></li>
+                                <li><a href="#most-popular">Most Popular</a></li>
                             </ul>
 
 
@@ -137,7 +137,7 @@
                     
                     <!-- end of chunk of content by Tom and Steve-->
 
-                    <h3 id="list">Most Popular</h3>
+                    <h3 id="most-popular">Most Popular iOS Tablet Landscape</h3>
                     <p>
                     <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
                     <ol>
