--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                     <p>
                     <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
                     <ol>
-                        <li>Promo:1084x270px</li>
-                        <li>Promo:1084x270px</li>
-                        <li>Promo:1084x270px</li>
-                        <li>Promo:1084x270px</li>
+                        <li>Promo:1084x270px @2x / 542x135px</li>
+                        <li>Promo:1084x270px @2x / 542x135px</li>
+                        <li>Promo:1084x270px @2x / 542x135px</li>
+                        <li>Promo:1084x270px @2x / 542x135px</li>
                         <li>1px divider</li>
                         <li>BG Colour #2a2a2a</li>
                         <li>Nav BG Colour #141414</li>
