--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                         <li>1px divider</li>
                         <li>BG Colour #2a2a2a</li>
                         <li>Nav BG Colour #141414</li>
+                        <li>Channel Attribution - Helvetica Neue, Reg, 24px
+                            Programme Title - Helvetica Neue, Light, 52px 
+                            Episode Title - Helvetica Neue, Light, 28px  
+                        </li>
                     </ol>
                     </p>
 
