--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                         <li>1px divider</li>
                         <li>BG Colour #2a2a2a</li>
                         <li>Nav BG Colour #141414</li>
-                        <li>Channel Attribution - Helvetica Neue, Reg, 24px
-                            Programme Title - Helvetica Neue, Light, 52px 
+                        <li>Channel Attribution - Helvetica Neue, Reg, 24px<br>
+                            Programme Title - Helvetica Neue, Light, 52px<br>
                             Episode Title - Helvetica Neue, Light, 28px  
                         </li>
                     </ol>
