--- a/index.html
+++ b/index.html
@@ -137,7 +137,25 @@
                     
                     <!-- end of chunk of content by Tom and Steve-->
 
-                    <h3 id="most-popular">Most Popular iOS Tablet Landscape</h3>
+                    <h3 id="most-popular">Most Popular iOS Tablet Landscape - Closed</h3>
+                    <p>
+                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
+                    <ol>
+                        <li>Promo:754x270px @2x / 377x135px</li>
+                        <li>Promo:754x270px @2x / 377x135px</li>
+                        <li>Promo:754x270px @2x / 377x135px</li>
+                        <li>Promo:754x271px @2x / 377x135px</li>
+                        <li>1px divider</li>
+                        <li>BG Colour #2a2a2a</li>
+                        <li>Nav BG Colour #141414</li>
+                        <li>Channel Attribution - Helvetica Neue, Reg, 24px<br>
+                            Programme Title - Helvetica Neue, Light,52px<br>
+                            Episode Title - Helvetica Neue,Light,28px  
+                        </li>
+                    </ol>
+                    </p>
+
+                    <h3 id="most-popular">Most Popular iOS Tablet Landscape - Open</h3>
                     <p>
                     <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
                     <ol>
