--- a/index.html
+++ b/index.html
@@ -157,19 +157,16 @@
 
                     <h3 id="most-popular">Most Popular iOS Tablet Landscape - Open</h3>
                     <p>
-                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/3iuq4u8xc9jlwzwozssf.png"/>
+                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/upy9og5yedv6q4y7he36.png"/>
                     <ol>
-                        <li>Promo:754x270px @2x / 377x135px</li>
-                        <li>Promo:754x270px @2x / 377x135px</li>
-                        <li>Promo:754x270px @2x / 377x135px</li>
-                        <li>Promo:754x271px @2x / 377x135px</li>
+                        <li>Today's - Helvetica Neue, Reg, 24px<br>
+                         Most Popular - Helvetica Neue, Light, 52px <br>
+                         Programmes - Helvetica Neue, Light, 32px</li>
+                        <li>Promo:288x162px @2x / 144x81x</li>
+                        <li>Channel Attribution - Helvetica Neue, Reg, 20px<br>
+                         Programme Title - Helvetica Neue, Light, 36px <br>
+                         Episode Title - Helvetica Neue, Regular, 24px</li>
                         <li>1px divider</li>
-                        <li>BG Colour #2a2a2a</li>
-                        <li>Nav BG Colour #141414</li>
-                        <li>Channel Attribution - Helvetica Neue, Reg, 24px<br>
-                            Programme Title - Helvetica Neue,Light,52px<br>
-                            Episode Title - Helvetica Neue,Light,28px  
-                        </li>
                     </ol>
                     </p>
 
