--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@
                          Programmes - Helvetica Neue, Light, 32px</li>
                         <li>Promo:288x162px @2x / 144x81x</li>
                         <li>Channel Attribution - Helvetica Neue, Reg, 20px<br>
-                         Programme Title - Helvetica Neue, Light, 36px <br>
+                         Programme Title - Helvetica Neue, Light, 36px<br>
                          Episode Title - Helvetica Neue, Regular, 24px</li>
-                        <li>1px divider</li>
+                        <li>12px spacing - 1px divider</li>
+                        <li>Overlay panel - 60% semi-transparent #FFF</li>
+                        <li>Helvetica Neue, Bold, 32px</li>
                     </ol>
                     </p>
-
 
                     <h2>Links and buttons</h2>
                     <p>
