--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                          Programme Title - Helvetica Neue, Light, 36px<br>
                          Episode Title - Helvetica Neue, Regular, 24px</li>
                         <li>12px spacing - 1px divider</li>
-                        <li>Overlay panel - 60% semi-transparent #FFF</li>
+                        <li>Overlay panel - 60% semi-transparent #FFFFFF</li>
                         <li>Helvetica Neue, Bold, 32px</li>
                     </ol>
                     </p>
