--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <li>Today's - Helvetica Neue, Reg, 24px<br>
                          Most Popular - Helvetica Neue, Light, 52px <br>
                          Programmes - Helvetica Neue, Light, 32px</li>
-                        <li>Promo:288x162px @2x / 144x81x</li>
+                        <li>Promo:288x162px @2x / 144x81</li>
                         <li>Channel Attribution - Helvetica Neue, Reg, 20px<br>
                          Programme Title - Helvetica Neue, Light, 36px<br>
                          Episode Title - Helvetica Neue, Regular, 24px</li>
