--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
                         <li>Helvetica Neue, Bold, 32px</li>
                     </ol>
                     </p>
+                    
+                       <p>
+                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/85y54askbn5wuy472y6i.png"/>
+                    <ol>
+                        <li>Touch state area, user can either swipe down the overlay panel or tap the close button.</li>
+                    </ol>
+                    </p>
 
                     <h2>Links and buttons</h2>
                     <p>
