--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <li>Promo:754x270px @2x / 377x135px</li>
                         <li>Promo:754x270px @2x / 377x135px</li>
                         <li>Promo:754x270px @2x / 377x135px</li>
-                        <li>Promo:754x271px @2x / 377x135px</li>
+                        <li>Promo:754x<b>271px</b> @2x / 377x135px</li>
                         <li>1px divider</li>
                         <li>BG Colour #2a2a2a</li>
                         <li>Nav BG Colour #141414</li>
