--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     
                     <h3 id="collections">Collections iOS Tablet Portait </h3>
                     <p>
-                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/raqzu1bs8j2rxapsc293.png"/>
+                    <img class="img-box-portrait" src="https://myshare.box.com/shared/static/raqzu1bs8j2rxapsc293.png"/>
                     <ol>
                         <li>Main Promo: 1152x648px @2 / 576x324px</li> <!-- 1 -->
                         <li>Promo images: 384x216px @2 / 1926x108px</li><!-- 2 -->
@@ -165,7 +165,7 @@
                     </p>
                        <h3 id="collections">Collections iOS Tablet Portrait Open </h3>
                     <p>
-                    <img class="img-box-landscape" src="https://myshare.box.com/shared/static/njwieyvxl9rc0xlbpvwn.png"/>
+                    <img class="img-box-portrait" src="https://myshare.box.com/shared/static/njwieyvxl9rc0xlbpvwn.png"/>
                     <ol>
                         <li>Programme Title - Helvetica Neue, Light, 52px<br>
                         Episode count - Helvetica Neue, Regular, 28px</li>
