--- a/index.html
+++ b/index.html
@@ -154,13 +154,15 @@
                     <p>
                     <img class="img-box-portrait" src="https://myshare.box.com/shared/static/raqzu1bs8j2rxapsc293.png"/>
                     <ol>
-                        <li>Main Promo: 1152x648px @2 / 576x324px</li> <!-- 1 -->
-                        <li>Promo images: 384x216px @2 / 1926x108px</li><!-- 2 -->
+                        <li>Main Promo: 1152x648px @2x / 576x324px</li> <!-- 1 -->
+                        <li>Promo images: 384x216px @2x / 1926x108px</li><!-- 2 -->
                         <li>Programme Title - Helvetica Neue, Light, 52px<br>
                             Episode count - Helvetica Neue, Light, 28px</li>
                         <li>Programme Title - Helvetica Neue, Light, 36px<br>
                             Episode title - Helvetica Neue, Light, 28px
                         </li>    
+                        <li>Overlay panel #000000 @ 60% opacity</li>
+                        <li>Padding 120px @2x / 60px </li>
                     </ol>
                     </p>
                        <h3 id="collections">Collections iOS Tablet Portrait Open </h3>
