--- a/index.html
+++ b/index.html
@@ -169,13 +169,8 @@
                     <p>
                     <img class="img-box-portrait" src="https://myshare.box.com/shared/static/njwieyvxl9rc0xlbpvwn.png"/>
                     <ol>
-                        <li>Programme Title - Helvetica Neue, Light, 52px<br>
-                        Episode count - Helvetica Neue, Regular, 28px</li>
-                        <li>12px padding - 1px divider - 12px padding</li>
-                        <li>Promo:288x162px @2x / 144x81</li>
-                        <li>Programme Title - Helvetica Neue, Light, 36px</li>
-                        <li>Episode Title - Helvetica Neue, Regular, 24px</li>
-                        
+                        <li>Overlay to #000000 @ 70% opacity (so you can see the main promo image)</li>
+                        <li>Programme Title - Helvetica Neue, Light, 52px</li>
                     </ol>
                     </p>
                     
