--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <p>
                     <img class="img-box-portrait" src="https://myshare.box.com/shared/static/njwieyvxl9rc0xlbpvwn.png"/>
                     <ol>
-                        <li>Overlay to #000000 @ 70% opacity (so you can see the main promo image)</li>
+                        <li>Overlay panel #000000 @ 70% opacity (so you can see the main promo image)</li>
                         <li>Programme Title - Helvetica Neue, Light, 52px</li>
                     </ol>
                     </p>
