--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                          Episode title - Helvetica Neue, Reg, 24px<br> 
                         </li>
                         <li>Promo image: 288x162 @2x / 144x81</li>
-                        
+                        <li>1px divider - 12px padding</li>
                     </ol>
                     </p>
                     
